Added variable for SAP client number.

--- a/spring-boot/sap-srfc-destination-spring-boot/src/main/resources/application.properties
+++ b/spring-boot/sap-srfc-destination-spring-boot/src/main/resources/application.properties
@@ -23,5 +23,6 @@ swagger.host=localhost:8080
 s4hana.host=customvalue
 s4hana.port=customvalue
 s4hana.portjco=customvalue
+sap.client=customvalue
 s4hana.user=customvalue
 s4hana.password=customvalue
